fix: minimise the taks overflow issue

--- a/front-end/src/components/organisms/TasksColumn/TasksColumn.css
+++ b/front-end/src/components/organisms/TasksColumn/TasksColumn.css
@@ -1,35 +1,33 @@
 .task-column {
+    flex: 1;
     display: flex;
     flex-direction: column;
-    flex: 1;
-    min-height: 0;
-    max-height: 100%;
+    height: 100%;
     width: 33%;
-    margin: 1rem;
+    padding: 1rem;
 }
 
 .task-column-content {
     overflow-y: auto;
-    flex: 1;
-    min-height: 60px;
+    height: 100%;
     padding-top: 1rem;
     padding-right: 0.5rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    flex-grow: 0;
 }
 
 .empty-placeholder {
     text-align: center;
-    color: #aaa;
     pointer-events: none;
 }
 
 .task-column-content::-webkit-scrollbar {
-  width: 0.5rem;
+    width: 0.5rem;
 }
 
 .task-column-content::-webkit-scrollbar-thumb {
-  background-color: #645FC6;
-  border-radius: 1rem;
+    background-color: #645fc6;
+    border-radius: 1rem;
 }
