--- a/front-end/src/components/templates/DashboardPage/DashboardPage.css
+++ b/front-end/src/components/templates/DashboardPage/DashboardPage.css
@@ -12,16 +12,17 @@
 }
 
 .main-content-container {
-    flex: 3;
-    height: 100vh;
+    flex: 1;
+    max-height: 100%;
     display: flex;
     flex-direction: column;
 }
 
 .main-content {
-    background-color: #21212d;
-    height: 100vh;
-    display: flex;
-    justify-content: space-evenly;
     flex: 1;
+    background-color: #21212d;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
